manifests/monitoring/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
